Lv滑动时行交互背景不消失的bug

--- a/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
+++ b/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
@@ -41,5 +41,5 @@
         </DataTemplate>
     </a:Mv.Resources>
     
-    <a:Lv x:Name="_lv" ItemClick="OnItemClick" />
+    <a:Lv x:Name="_lv" ItemClick="OnItemClick" SelectionMode="None" />
 </a:Mv>
