--- a/Client/Dt.Sample/Win/ThreePanelWin.xaml
+++ b/Client/Dt.Sample/Win/ThreePanelWin.xaml
@@ -7,21 +7,21 @@
     <a:Pane>
         <a:Tabs>
             <a:Tab Title="左区">
-
+                <Button Content="导航到【主区/右区】" Click="OnGoto" Margin="40" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
     <a:Main>
         <a:Tabs>
             <a:Tab Title="主区">
-
+                <TextBlock Text="主区内容" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </a:Tab>
         </a:Tabs>
     </a:Main>
     <a:Pane Pos="Right">
         <a:Tabs>
             <a:Tab Title="右区">
-                
+                <TextBlock Text="右区内容" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </a:Tab>
         </a:Tabs>
     </a:Pane>
