--- a/Client/Dt.Base/Controls/PrivacyDlg.xaml
+++ b/Client/Dt.Base/Controls/PrivacyDlg.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Background="Transparent">
+    Background="Transparent"
+    BorderThickness="0">
 
     <Border Background="White" CornerRadius="10">
         <StackPanel Margin="20" Spacing="20">
