--- a/Client/Dt.Cells/Themes/Generic.xaml
+++ b/Client/Dt.Cells/Themes/Generic.xaml
@@ -1,13 +1,12 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:win="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:wasm="http://uno.ui/wasm"
-    xmlns:not_wasm="http://uno.ui/not_wasm"
-    xmlns:local="using:Dt.Cells.UI"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="wasm not_wasm">
+    xmlns:local="using:Dt.Cells.UI">
 
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="ms-appx:///Dt.Cells/Themes/Global.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    
     <!--原来放在主题样式中-->
     <!--###################### Brushed Resources ####################-->
 
@@ -15,12 +14,6 @@
     <SolidColorBrush x:Key="ControlBorderBrush" Color="#FFE0E0E0"/>
     <SolidColorBrush x:Key="ControlForegroundBrush" Color="#000000"/>
     <SolidColorBrush x:Key="ControlBackgroundBrush" Color="#FFF6F6F6"/>
-
-    <SolidColorBrush x:Key="中灰1" Color="#FFD6D6D6"/>
-    <SolidColorBrush x:Key="中灰2" Color="#FFC3C3C3"/>
-
-    <SolidColorBrush x:Key="浅灰1" Color="#FFF1F1F1"/>
-    <SolidColorBrush x:Key="浅灰2" Color="#FFE0E0E0"/>
 
     <SolidColorBrush x:Key="GroupButtonForeground" Color="#FF474747"/>
     <SolidColorBrush x:Key="GroupButtonMouseOver" Color="#FF94DCFF"/>
@@ -73,11 +66,6 @@
 
     <SolidColorBrush x:Key="ListBoxItemNormalBackColor" Color="#FF1BA1E2" />
     <SolidColorBrush x:Key="ListBoxItemFocusBackColor" Color="#FF6DBDD1" />
-    
-    <!--自定义图标字体库-->
-    <win:FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</win:FontFamily>
-    <not_wasm:FontFamily x:Key="IconFont">ms-appx:///Assets/Fonts/icon.ttf#DtIcon</not_wasm:FontFamily>
-    <wasm:FontFamily x:Key="IconFont">DtIcon</wasm:FontFamily>
     
     <!--################## Silverlight Button Style############-->
 
