--- a/Client/Dt.Base/Themes/Styles/Desk.xaml
+++ b/Client/Dt.Base/Themes/Styles/Desk.xaml
@@ -90,13 +90,13 @@
                                 <VisualState x:Name="UnSelected"/>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 深黄遮罩}" />
+                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 浅黄}" />
                                         <Setter Target="LineRect.Fill" Value="{StaticResource 亮蓝}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 暗遮罩}" />
+                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 中黄}" />
                                         <Setter Target="LineRect.Fill" Value="{StaticResource 亮蓝}" />
                                     </VisualState.Setters>
                                 </VisualState>
@@ -183,13 +183,13 @@
                                 <VisualState x:Name="UnSelected"/>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 深黄遮罩}" />
+                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 浅黄}" />
                                         <Setter Target="LineRect.Fill" Value="{StaticResource 亮蓝}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 暗遮罩}" />
+                                        <Setter Target="NormalBorder.Fill" Value="{StaticResource 中黄}" />
                                         <Setter Target="LineRect.Fill" Value="{StaticResource 亮蓝}" />
                                     </VisualState.Setters>
                                 </VisualState>
@@ -213,7 +213,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Grid x:Name="RootGrid" Background="Transparent" BorderThickness="1">
+                    <Grid x:Name="RootGrid" Background="Transparent">
                         <TextBlock x:Name="ElementTitle"
                                    Text="{TemplateBinding Content}"
                                    FontFamily="{StaticResource IconFont}"
@@ -227,13 +227,12 @@
                                 <VisualState x:Name="Normal"/>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="RootGrid.Background" Value="{StaticResource 暗遮罩}" />
-                                        <Setter Target="RootGrid.BorderBrush" Value="{StaticResource 深暗遮罩}" />
+                                        <Setter Target="RootGrid.Background" Value="{StaticResource 浅黄}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="RootGrid.Background" Value="{StaticResource 深暗遮罩}" />
+                                        <Setter Target="RootGrid.Background" Value="{StaticResource 中黄}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Disabled" />
