--- a/Client/Dt.Base/Themes/Styles/Menu.xaml
+++ b/Client/Dt.Base/Themes/Styles/Menu.xaml
@@ -30,7 +30,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="a:Mi">
                     <Grid x:Name="RootElement" Background="{TemplateBinding Background}">
-                        <Rectangle x:Name="Rect" IsHitTestVisible="False"/>
+                        <Rectangle x:Name="Rect" IsHitTestVisible="False" />
                         <Grid x:Name="ContentGrid" Margin="15,0,15,0" VerticalAlignment="Center">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
@@ -60,13 +60,17 @@
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="Rect.Fill" Value="{StaticResource 暗遮罩}" />
-                                        <Setter Target="Rect.Stroke" Value="{StaticResource 深暗遮罩}" />
+                                        <Setter Target="Rect.Fill" Value="{StaticResource 中黄}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="Rect.Fill" Value="{StaticResource 深暗遮罩}" />
+                                        <Setter Target="Rect.Fill" Value="{StaticResource 深黄}" />
+                                    </VisualState.Setters>
+                                </VisualState>
+                                <VisualState x:Name="LightPressed">
+                                    <VisualState.Setters>
+                                        <Setter Target="Rect.Fill" Value="{StaticResource 深亮遮罩}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Disabled">
